# ccterm

./: .gitignore  CMakeLists.txt  README.md  shell.nix
cmake/: FindSDL2_ttf.cmake
nix/: sources.json
src/: main.cpp  pty.cpp  pty.hpp  render.cpp  render.hpp
